Fix installers and repo information (#764)